iOS/grid/ios/IOSTick.h

/*
 *   grid is a game written in Haskell
 *   Copyright (C) 2018 karamellpelle@hotmail.com
 *
 *   This file is part of grid.
 *
 *   grid is free software: you can redistribute it and/or modify
 *   it under the terms of the GNU General Public License as published by
 *   the Free Software Foundation, either version 3 of the License, or
 *   (at your option) any later version.
 *
 *   grid is distributed in the hope that it will be useful,
 *   but WITHOUT ANY WARRANTY; without even the implied warranty of
 *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *   GNU General Public License for more details.
 *
 *   You should have received a copy of the GNU General Public License
 *   along with grid.  If not, see <http://www.gnu.org/licenses/>.
*/


void ios_initTick();


void ios_tickBegin();

void ios_tickEnd();


double ios_tickGet();

void ios_tickSet(double );


double ios_tickClockAGet();

void ios_tickClockASet(double );

double ios_tickClockAGetSpeed();

void ios_tickClockASetSpeed(double );

double ios_tickClockBGet();

void ios_tickClockBSet(double );

double ios_tickClockBGetSpeed();

void ios_tickClockBSetSpeed(double );

double ios_tickClockCGet();

void ios_tickClockCSet(double );

double ios_tickClockCGetSpeed();

void ios_tickClockCSetSpeed(double );

double ios_tickClockDGet();

void ios_tickClockDSet(double );

double ios_tickClockDGetSpeed();

void ios_tickClockDSetSpeed(double );

double ios_tickClockEGet();

void ios_tickClockESet(double );

double ios_tickClockEGetSpeed();

void ios_tickClockESetSpeed(double );

double ios_tickClockFGet();

void ios_tickClockFSet(double );

double ios_tickClockFGetSpeed();

void ios_tickClockFSetSpeed(double );